--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans&family=Roboto+Mono&display=swap');
 
 @layer base {
     html {
         font-family: 'Plus Jakarta Sans', sans-serif;
     }
+    body {
+        background: #0f172a;
+    }
+
   }
